--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -50,8 +50,7 @@ steps:
   - name: 'gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.0'
     id: 'cloud-sql-proxy'
     waitFor: ['build-campaigns-backend']
-    entrypoint: 'bash'
-    args: ['-c', 'cloud-sql-proxy $$DB_CONNECTION_NAME --unix-socket=/cloudsql']
+    args: ['--unix-socket=/cloudsql', '$DB_CONNECTION_NAME']
     secretEnv: ['DB_CONNECTION_NAME']
 
   # Step 6: Run Database Migrations using a secret for the DATABASE_URL
