--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ cerberus_universal_backend/alembic.ini
 flutter.tar.xz
 flutter/
 tests/__pycache__/conftest.cpython-312-pytest-7.4.4.pyc
+__pycache__/
+*.pyc
 venv/bin/Activate.ps1
 venv/bin/activate
 venv/bin/activate.csh
