--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,34 @@
 {
-  "emulators": {
-    "dataconnect": {
-      "dataDir": "dataconnect/.dataconnect/pgliteData"
+  "hosting": [
+    {
+      "target": "cerberus",
+      "public": "cerberus_frontend/build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "target": "campaigns",
+      "public": "universal_campaign_frontend/build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
-  },
-  "dataconnect": {
-    "source": "dataconnect"
-  }
+  ]
 }
