--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -56,3 +56,5 @@ options:
 substitutions:
   _REGION: 'us-south1'
   _INSTANCE_CONNECTION_NAME: 'cerberus-data-cloud:us-south1:cerberus-db'
+  _PROJECT_ID: 'cerberus-data-cloud'
+  _COMMIT_SHA: 'latest'
