--- a/cerberus_frontend/.gitignore
+++ b/cerberus_frontend/.gitignore
@@ -1,19 +1,62 @@
 # Miscellaneous
+*.class
+*.lock
 *.log
+*.pyc
+*.swp
 .DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Visual Studio Code related
+.classpath
+.project
+.settings/
+.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
-.pub/
-/build/
+build/
 
-# Symbolication related
-app.*.symbols
+# Android related
+/android/app/build
+/android/.gradle
+/android/key.properties
+local.properties
 
-# Obfuscation related
-app.*.map.json
+# iOS/XCode related
+/ios/build/
+/ios/Pods/
+/ios/.symlinks/
+/ios/Runner/GeneratedPluginRegistrant.*
+/ios/Flutter/App.framework
+/ios/Flutter/Flutter.framework
+
+# macOS
+/macos/build/
+/macos/Pods/
+/macos/.symlinks/
+/macos/Flutter/ephemeral
+
+# Windows
+/windows/build/
+/windows/flutter/ephemeral
+
+# Linux
+/linux/build/
+/linux/flutter/ephemeral
+
+# Coverage
+coverage/
