--- a/universal_campaign_frontend/pubspec.yaml
+++ b/universal_campaign_frontend/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  go_router: ^14.1.1
   cupertino_icons: ^1.0.6
   web: ^1.0.0
 
