--- a/universal_campaign_frontend/pubspec.yaml
+++ b/universal_campaign_frontend/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   go_router: ^14.1.1
   cupertino_icons: ^1.0.6
   web: ^1.0.0
+  http: ^1.2.1
+  flutter_stripe: ^10.1.1
 
 dev_dependencies:
   flutter_test:
