--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
     - '--allow-unauthenticated'
     - '--add-cloudsql-instances'
     - '${_INSTANCE_CONNECTION_NAME}'
-    - '--set-secrets=DB_PASSWORD=DB_PASSWORD:latest,STRIPE_API_KEY=STRIPE_API_KEY:latest'
+    - '--set-secrets=DB_USER=DB_USER:latest,DB_PASS=DB_PASSWORD:latest,DB_NAME=DB_NAME:latest,DB_CONNECTION_NAME=DB_CONNECTION_NAME:latest,SECRET_KEY=SECRET_KEY:latest,PGCRYPTO_SECRET_KEY=PGCRYPTO_SECRET_KEY:latest,BLAIR_STRIPE_SECRET_KEY=BLAIR_STRIPE_SECRET_KEY:latest,COX_STRIPE_SECRET_KEY=COX_STRIPE_SECRET_KEY:latest,EMMONS_STRIPE_SECRET_KEY=EMMONS_STRIPE_SECRET_KEY:latest,GAUNTT_STRIPE_SECRET_KEY=GAUNTT_STRIPE_SECRET_KEY:latest,MINTZ_STRIPE_SECRET_KEY=MINTZ_STRIPE_SECRET_KEY:latest,TICE_STRIPE_SECRET_KEY=TICE_STRIPE_SECRET_KEY:latest,TULLOCH_STRIPE_SECRET_KEY=TULLOCH_STRIPE_SECRET_KEY:latest,LEUDEKE_STRIPE_SECRET_KEY=LEUDEKE_STRIPE_SECRET_KEY:latest,WHITSON_STRIPE_SECRET_KEY=WHITSON_STRIPE_SECRET_KEY:latest,BLAIR_STRIPE_WEBHOOK_SECRET=BLAIR_STRIPE_WEBHOOK_SECRET:latest,COX_STRIPE_WEBHOOK_SECRET=COX_STRIPE_WEBHOOK_SECRET:latest,EMMONS_STRIPE_WEBHOOK_SECRET=EMMONS_STRIPE_WEBHOOK_SECRET:latest,GAUNTT_STRIPE_WEBHOOK_SECRET=GAUNTT_STRIPE_WEBHOOK_SECRET:latest,MINTZ_STRIPE_WEBHOOK_SECRET=MINTZ_STRIPE_WEBHOOK_SECRET:latest,TICE_STRIPE_WEBHOOK_SECRET=TICE_STRIPE_WEBHOOK_SECRET:latest,TULLOCH_STRIPE_WEBHOOK_SECRET=TULLOCH_STRIPE_WEBHOOK_SECRET:latest,LEUDEKE_STRIPE_WEBHOOK_SECRET=LEUDEKE_STRIPE_WEBHOOK_SECRET:latest,WHITSON_STRIPE_WEBHOOK_SECRET=WHITSON_STRIPE_WEBHOOK_SECRET:latest,WEBHOOK_SECRET_KEY=WEBHOOK_SECRET_KEY:latest'
 
 # Build and deploy the cerberus_frontend
 - name: 'gcr.io/cloud-builders/npm'
