--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,10 +34,11 @@ steps:
     - '-c'
     - |
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      apt-get update && apt-get install -y wget
       FLUTTER_SDK_URL="https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${_FLUTTER_VERSION}-stable.tar.xz"
 
       echo "Downloading Flutter SDK version $_FLUTTER_VERSION..."
-      wget -q -O /tmp/flutter.tar.xz $$FLUTTER_SDK_URL
+      wget -q -O /tmp/flutter.tar.xz $FLUTTER_SDK_URL
       echo "Extracting Flutter SDK..."
       mkdir -p /flutter
       tar -xf /tmp/flutter.tar.xz -C /flutter --strip-components=1
@@ -75,10 +76,11 @@ steps:
     - '-c'
     - |
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      apt-get update && apt-get install -y wget
       FLUTTER_SDK_URL="https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${_FLUTTER_VERSION}-stable.tar.xz"
 
       echo "Downloading Flutter SDK version $_FLUTTER_VERSION..."
-      wget -q -O /tmp/flutter.tar.xz $$FLUTTER_SDK_URL
+      wget -q -O /tmp/flutter.tar.xz $FLUTTER_SDK_URL
       echo "Extracting Flutter SDK..."
       mkdir -p /flutter
       tar -xf /tmp/flutter.tar.xz -C /flutter --strip-components=1
