--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -60,7 +60,7 @@ steps:
   args:
     - '-c'
     - |
-      export PATH="/flutter/bin:$PATH" # Add flutter to PATH
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter pub get
   dir: 'cerberus_frontend' # Change working directory for this step
   volumes:
@@ -73,7 +73,7 @@ steps:
   args:
     - '-c'
     - |
-      export PATH="/flutter/bin:$PATH" # Add flutter to PATH
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter build web --release
   dir: 'cerberus_frontend' # Change working directory for this step
   volumes:
@@ -91,7 +91,7 @@ steps:
   args:
     - '-c'
     - |
-      export PATH="/flutter/bin:$PATH" # Add flutter to PATH
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter pub get
   dir: 'universal_campaign_frontend' # Change working directory for this step
   volumes:
@@ -104,7 +104,7 @@ steps:
   args:
     - '-c'
     - |
-      export PATH="/flutter/bin:$PATH" # Add flutter to PATH
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter build web --release
   dir: 'universal_campaign_frontend' # Change working directory for this step
   volumes:
